Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59417

MapboxGL maps do not match the projection when canvas aspect ratio is below 1.0

    XMLWordPrintable

Details

    Description

      To reproduce:

      • start the mapviewer example leaving the window size as is (360 x 640)
      • select mapboxgl
      • tilt the map
      • pan around

      the red dot and the label do not stick to their geo position.

      If you enlarge the window to be 1:1 or larger A/R, things work as expected

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paangele Paolo Angelelli
            paangele Paolo Angelelli
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes